fix: wrong color on selection

--- a/src/components/keypad/Keypad.module.scss
+++ b/src/components/keypad/Keypad.module.scss
@@ -34,6 +34,6 @@
 	}
 
 	:focus-visible {
-		outline-color: var(--focus-on-black-color, #fff);
+		outline-color: var(--contrast-on-black-color, #fff);
 	}
 }
