--- a/src/index.scss
+++ b/src/index.scss
@@ -60,7 +60,7 @@ body {
 }
 
 ::selection {
-	color: var(--dark-color);
+	color: #000;
 	background-color: var(--contrast-on-black-color);
 }
 
